# rhsm-subscriptions

./: .coderabbit.yaml  .dockerignore  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DRAFT - Release Stabilization Workflow Proposal.md  Dockerfile  Dockerfile.test  FIX_SUMMARY.md  IQE_REQUIREMENTS_MAP.txt  Jenkinsfile  Jenkinsfile-lburnett  Jenkinsfile.post-merge  Jenksinsfile  Makefile  PR-Description-SWATCH-3545.md  README-kafka.md  README.md  SWATCH-3545-Bug-Analysis.md  SWATCH-3545-Investigation-Summary.md  SWATCH-3545.xml  TODO migration to maven.md  build.gradle  build_deploy.sh  catalog-entities.yaml  cicd_common.sh  component-tests-architecture-concerns.md  container-compose.yml  datarouter.json  debug_intra_batch_conflict.py  debug_setup_guide.md  dependencies.gradle  deploy_ephemeral_env.sh  deploy_kafka_bridge.sh  deploy_smoke_test.sh  docker-compose-multi-kafka.yml  docker-compose-production.yml  (+48 more)
.github/: dependabot.yml  pull_request_template.md
.playwright-mcp/: -12601.txt
.sonarlint/: connectedMode.json
.tekton/: bonfire-component-tests-pipeline-no-oci.yaml  bonfire-component-tests-pipeline.yaml  bonfire-component-tests-pipelinerun.yaml  bonfire-integration-tests-pipeline.yaml  bonfire-integration-tests-pipelinerun.yaml  rhsm-pull-request.yaml  rhsm-push.yaml  rhsm-subscriptions-pull-request.yaml  rhsm-subscriptions-push.yaml  run-tests-task.yaml  swatch-api-pull-request.yaml  swatch-api-push.yaml  swatch-billable-usage-pull-request.yaml  swatch-billable-usage-push.yaml  swatch-contracts-pull-request.yaml  swatch-contracts-push.yaml  swatch-database-pull-request.yaml  swatch-database-push.yaml  swatch-metrics-hbi-pull-request.yaml  swatch-metrics-hbi-push.yaml  swatch-metrics-pull-request.yaml  swatch-metrics-push.yaml  swatch-producer-aws-pull-request.yaml  swatch-producer-aws-push.yaml  swatch-producer-azure-pull-request.yaml  swatch-producer-azure-push.yaml  swatch-producer-red-hat-marketplace-pull-request.yaml  swatch-producer-red-hat-marketplace-push.yaml  swatch-subscription-sync-pull-request.yaml  swatch-subscription-sync-push.yaml  swatch-system-conduit-pull-request.yaml  swatch-system-conduit-push.yaml  swatch-tally-pull-request.yaml  swatch-tally-push.yaml  swatch-utilization-pull-request.yaml  swatch-utilization-push.yaml  verify-snapshot-components-pipeline.yaml  verify-snapshot-components-task.yaml
.unleash/: Dockerfile.unleash  flags.json
api/: .openapi-generator-ignore  build.gradle  internal-subscription-service-api-spec.yaml  internal-subscriptions-sync-api-spec.yaml  pom.xml  rhsm-conduit-api-config.json  rhsm-conduit-api-spec.yaml  rhsm-subscriptions-api-config.json  rhsm-subscriptions-api-spec.yaml  rhsm-subscriptions-api-v1-config.json  rhsm-subscriptions-api-v1-spec.yaml  rhsm-subscriptions-api-v2-config.json  rhsm-subscriptions-api-v2-spec.yaml  subscriptions-api-config.json  subscriptions-api-spec.yaml
billing-producer-aws/: README.adoc
buildSrc/: build.gradle
clients/: build.gradle  pom.xml
clients-core/: build.gradle  pom.xml
cloudigrade-client/: cloudigrade-api-spec.yaml  cloudigrade-client-config.json
code-coverage/: generate.sh
dashboards/: README.md  (+3 more)
iqe-poc-plugin/: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  buildconfig.yml  pyproject.toml
iqe-poc-plugin/iqe_poc/: __init__.py  deprecations.py  pytest_plugin.py
iqe-poc-plugin/iqe_poc/conf/: poc.default.yaml
iqe-poc-plugin/iqe_poc/fixtures/: __init__.py
iqe-poc-plugin/iqe_poc/tests/: README.md  test_poc.py  test_verify_ansible_usage.py
(+4455 files in other folders)
